WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268354
Typos in SVG code where transfrom is used instead of transform
https://bugs.webkit.org/show_bug.cgi?id=268354
Summary
Typos in SVG code where transfrom is used instead of transform
Karl Dubost
Reported
2024-01-29 19:45:03 PST
replace transfrom by transform Source/WebCore/svg/SVGTransformList.cpp Source/WebCore/svg/SVGAnimateTransformElement.cpp Source/WebCore/svg/SVGTransformValue.h
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 19:45:12 PST
<
rdar://problem/121899918
>
Karl Dubost
Comment 2
2024-01-29 19:49:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23488
EWS
Comment 3
2024-01-30 04:49:40 PST
Committed
273736@main
(ea8fdd5062a8): <
https://commits.webkit.org/273736@main
> Reviewed commits have been landed. Closing PR #23488 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug