Typos in SVG code where transfrom is used instead of transform https://bugs.webkit.org/show_bug.cgi?id=268354 rdar://121899918

Reviewed by Simon Fraser and Tim Horton.

This is a simple ifx for strings with typo where 'transfrom' has been
used instead of 'transform'.

* Source/WebCore/svg/SVGAnimateTransformElement.cpp:
(WebCore::SVGAnimateTransformElement::animateRangeString const):
* Source/WebCore/svg/SVGTransformList.cpp:
(WebCore::SVGTransformList::valueAsString const):
* Source/WebCore/svg/SVGTransformValue.h:
(WebCore::SVGTransformValue::valueAsString const):
(WebCore::SVGTransformValue::prefixForTransformType):
(WebCore::SVGTransformValue::prefixForTransfromType): Deleted.

Canonical link: https://commits.webkit.org/273736@main